clusters/default/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.${BASE_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: kube-system
      services:
        - name: jellyfin
          port: 8096
